mdapi/Custom/objects/Violations__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comments__c</fullName>
        <label>Additional Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affects_Securitized_Asset__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affects Securitized Asset</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_IH_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned IH Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Violations2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Vendor__c</fullName>
        <label>Assigned Vendor</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Daily_Fine_Accrual_Start_Date__c</fullName>
        <label>Daily Fine Accrual Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Assigned__c</fullName>
        <inlineHelpText>This field will auto-populate when either an IH Associate or Vendor is assigned.</inlineHelpText>
        <label>Date Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Deliquency_Paid__c</fullName>
        <label>Date Deliquency Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Document_of_Compliance_Recv_d__c</fullName>
        <label>Date Document of Compliance Recv&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fine_Amount_Charged_to_Ledger__c</fullName>
        <label>Date Fine Amount Charged to Ledger</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Fine_Amount_Paid__c</fullName>
        <label>Date Fine Amount Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Submitted_to_Accounting__c</fullName>
        <label>Date Submitted to Accounting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_Hearing__c</fullName>
        <label>Date/Time of Hearing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_Confirmed_Compliance__c</fullName>
        <label>Date of Confirmed Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Notice_Recv_d__c</fullName>
        <label>Date of First Notice Recv&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Notice_Sent_to_Occupant__c</fullName>
        <label>Date of First Notice Sent to Occupant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Notice_Sent_to_Rehab__c</fullName>
        <label>Date of First Notice Sent to Rehab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_First_Notice__c</fullName>
        <label>Date of First Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Notice_Recv_d__c</fullName>
        <label>Date of Notice Recv&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Notice__c</fullName>
        <label>Date of Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Required_Compliance__c</fullName>
        <inlineHelpText>Target date for completion/resolution of the violation.</inlineHelpText>
        <label>Date of Required Compliance</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Notice_Recv_d__c</fullName>
        <label>Date of Second Notice Recv&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Notice_Sent_to_Occupant__c</fullName>
        <label>Date of Second Notice Sent to Occupant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Notice_Sent_to_Rehab__c</fullName>
        <label>Date of Second Notice Sent to Rehab</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Second_Notice__c</fullName>
        <label>Date of Second Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Third_Notice_Recv_d__c</fullName>
        <label>Date of Third Notice Recv&apos;d</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Third_Notice_Sent_to_Occupant__c</fullName>
        <label>Date of Third Notice Sent to Occupant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Third_Notice__c</fullName>
        <label>Date of Third Notice</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delinquency_Amount__c</fullName>
        <label>Delinquency Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fine_Amount__c</fullName>
        <label>Fine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Notice_Sent_to_Occupant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Notice Sent to Occupant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Notice_Sent_to_Rehab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>First Notice Sent to Rehab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Notice_Type__c</fullName>
        <label>First Notice Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Regular Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HOA_Tracking__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HOA Tracking</label>
        <referenceTo>HOA_Tracking__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hearing_Location__c</fullName>
        <label>Hearing Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hearing_Scheduled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hearing Scheduled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lease__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lease</label>
        <referenceTo>Tenant_Card__c</referenceTo>
        <relationshipName>HOA_Violations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <label>Maintenance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Municipal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Municipal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occupant_Email__c</fullName>
        <formula>IF(NOT(ISBLANK(Lease__c)),   Lease__r.Email__c   ,  TIP__r.TIP_Occupant_Email__c )</formula>
        <inlineHelpText>This field comes from either the associated Lease or TIP record.</inlineHelpText>
        <label>Occupant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupant_Name__c</fullName>
        <formula>IF(NOT(ISBLANK(Lease__c)),  Lease__r.First_Last_Name__c ,  TIP__r.TIP_Occupant_Name__c )</formula>
        <inlineHelpText>This field comes from either the associated Lease or TIP record.</inlineHelpText>
        <label>Occupant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupant_Phone_primary__c</fullName>
        <formula>IF(NOT(ISBLANK(Lease__c)),   Lease__r.Phone_primary__c ,   TIP__r.TIP_Occupant_Phone__c  )</formula>
        <inlineHelpText>This field comes from either the associated Lease or TIP record.</inlineHelpText>
        <label>Occupant Phone (primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupant_Phone_secondary__c</fullName>
        <formula>IF(NOT(ISBLANK(Lease__c)),  Lease__r.Phone_secondary__c  , null )</formula>
        <inlineHelpText>This value comes from the associated Lease record.</inlineHelpText>
        <label>Occupant Phone (secondary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupied__c</fullName>
        <label>Occupied?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PM_Email__c</fullName>
        <label>PM Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Violations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PM_from_Portfolio__c</fullName>
        <formula>IF(  NOT( CONTAINS( Portfolio__r.Owner:User.Full_Name__c , &apos;Queue&apos;) )  &amp;&amp;  Portfolio__r.Owner:User.IsActive  = True   ,  Portfolio__r.Owner:User.Full_Name__c , &apos;Unassigned&apos;)</formula>
        <label>PM (from Portfolio)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PerDiemFineStartDate__c</fullName>
        <label>Per Diem Fine Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Per_Day_Fine_Amount__c</fullName>
        <label>Per Day Fine Amount (if applicable)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Portfolio</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipName>HOA_Violations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Property_Address_Text__c</fullName>
        <formula>IF(LEN( Residence__r.Address_Street__c )&gt;0, Residence__r.Address_Street__c&amp; &quot; &quot; , &quot;&quot; )&amp;
IF(LEN( Residence__r.Address_City__c )&gt;0, Residence__r.Address_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp; 
IF(LEN( Residence__r.Address_State__c )&gt;0, Residence__r.Address_State__c&amp; &quot; &quot; , &quot;&quot; )&amp; 
IF(LEN( Residence__r.Address_Zip_Code__c )&gt;0, Residence__r.Address_Zip_Code__c,&quot;&quot;)</formula>
        <label>Property Address Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Address__c</fullName>
        <formula>IF(LEN( Residence__r.Address_Street__c  )&gt;0, Residence__r.Address_Street__c&amp; &quot; &quot; , &quot;&quot; ) &amp; BR() &amp; 
IF(LEN( Residence__r.Address_City__c  )&gt;0, Residence__r.Address_City__c&amp; &quot;, &quot; , &quot;&quot; )&amp; 
IF(LEN( Residence__r.Address_State__c  )&gt;0, Residence__r.Address_State__c&amp; &quot; &quot; , &quot;&quot; )&amp; 
IF(LEN( Residence__r.Address_Zip_Code__c  )&gt;0, Residence__r.Address_Zip_Code__c,&quot;&quot;)</formula>
        <label>Property Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Delinquency__c</fullName>
        <label>Reason for Delinquency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region_Email_Distribution_List_Formula__c</fullName>
        <formula>CASE(  Portfolio__r.Region__c  , 

&quot;Atlanta&quot;,&quot;IHatlantaViolations@invitationhomes.com&quot;,
&quot;Charlotte&quot;,&quot;IHcharlotteViolations@invitationhomes.com&quot;,
&quot;Chicago&quot;, CASE ( Portfolio__r.Property_State__c , &apos;MN&apos;, &quot;IHMinneapolisViolations@invitationhomes.com&quot;, &quot;IHchicagoViolations@invitationhomes.com&quot;), 
&quot;Inland Empire&quot;,&quot;IHinlandempireViolations@invitationhomes.com&quot;,
&quot;Jacksonville&quot;,&quot;IHjacksonvilleViolations@invitationhomes.com&quot;,
&quot;Las Vegas&quot;,&quot;IHlasvegasViolations@invitationhomes.com&quot;,
&quot;Los Angeles&quot;,&quot;IHlosangelesViolations@invitationhomes.com&quot;,
&quot;Miami&quot;,&quot;IHMiamiViolations@invitationhomes.com&quot;,
&quot;Minneapolis&quot;,&quot;IHMinneapolisViolations@invitationhomes.com&quot;,
&quot;Orlando&quot;,&quot;IHOrlandoViolations@invitationhomes.com&quot;,
&quot;Phoenix&quot;,&quot;IHPhoenixViolations@invitationhomes.com&quot;,
&quot;Sacramento&quot;,&quot;IHSacramentoViolations@invitationhomes.com&quot;,
&quot;Seattle&quot;,&quot;IHSeattleViolations@invitationhomes.com&quot;,
&quot;Tampa&quot;,&quot;IHTampaViolations@invitationhomes.com&quot;,
&quot;madams@invitationhomes.com&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region Email Distribution List (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Email_Distribution_List__c</fullName>
        <label>Region Email Distribution List</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rehab_Office_Sign_Off_Date__c</fullName>
        <formula>Rehab__r.Office_Signoff_Date__c</formula>
        <label>Rehab Office Sign-Off Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rehab__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Required on HOA Violations/Requests with a Vacant record type.</description>
        <label>Rehab</label>
        <referenceTo>Rehab__c</referenceTo>
        <relationshipName>HOA_Violations_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residence</label>
        <referenceTo>Residence__c</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolution_Description__c</fullName>
        <label>Resolution Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Second_Fine_Amount__c</fullName>
        <label>Second Fine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Notice_Sent_to_Occupant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Notice Sent to Occupant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Notice_Sent_to_Rehab__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Notice Sent to Rehab</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Notice_Type__c</fullName>
        <label>Second Notice Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Regular Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Securitization_Pool__c</fullName>
        <formula>TEXT(Portfolio__r.Securitization_Pool__c)</formula>
        <label>Securitization Pool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Source</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Home Owners&apos;s Association (HOA), Municipality</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Violations</relationshipLabel>
        <relationshipName>HOA_Violations_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Completed - Pending Payment</fullName>
                </value>
                <value>
                    <fullName>Closed - No Fine Assessed</fullName>
                </value>
                <value>
                    <fullName>Closed - Fine Waived</fullName>
                </value>
                <value>
                    <fullName>Closed - Paid</fullName>
                </value>
                <value>
                    <fullName>Dismissed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subregion__c</fullName>
        <formula>CASE( Region__c, 
&apos;Inland Empire&apos;, &apos;Inland Empire&apos;, 
&apos;Los Angeles&apos;, &apos;Los Angeles&apos;, 
&apos;Sacramento&apos;, &apos;Sacramento&apos;, 
&apos;Seattle&apos;, &apos;Seattle&apos;, 
&apos;Las Vegas&apos;, &apos;Las Vegas&apos;, 
&apos;Charlotte&apos;, &apos;Charlotte&apos;, 
&apos;Chicago&apos;, CASE ( Portfolio__r.Property_State__c , &apos;MN&apos;, &apos;Minneapolis&apos;, &apos;Chicago&apos;), 
&apos;Atlanta&apos;,&apos;Atlanta&apos;, 
&apos;Tampa&apos;,&apos;Tampa&apos;, 
&apos;Miami&apos;,&apos;Miami&apos;, 
&apos;Jacksonville&apos;,&apos;Jacksonville&apos;, 
&apos;Orlando&apos;,&apos;Orlando&apos;, 
&apos;Phoenix&apos;,&apos;Phoenix&apos;, 
null)</formula>
        <label>Subregion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TIP</label>
        <referenceTo>TIP_Tracking__c</referenceTo>
        <relationshipName>HOA_Violations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Third_Fine_Amount__c</fullName>
        <label>Third Fine Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Notice_Sent_to_Occupant__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Notice Sent to Occupant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Third_Notice_Type__c</fullName>
        <label>Third Notice Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certified Mail</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Regular Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Animals</fullName>
                </value>
                <value>
                    <fullName>Architectural</fullName>
                </value>
                <value>
                    <fullName>Basketball Hoops</fullName>
                </value>
                <value>
                    <fullName>Exterior Maintenance</fullName>
                </value>
                <value>
                    <fullName>Lawn &amp; Weeds</fullName>
                </value>
                <value>
                    <fullName>Nuisance</fullName>
                </value>
                <value>
                    <fullName>Permits</fullName>
                </value>
                <value>
                    <fullName>Rental Inspections</fullName>
                </value>
                <value>
                    <fullName>Signs</fullName>
                </value>
                <value>
                    <fullName>Snow/Ice</fullName>
                </value>
                <value>
                    <fullName>Tenant Registration</fullName>
                </value>
                <value>
                    <fullName>Trash</fullName>
                </value>
                <value>
                    <fullName>Trash Cans</fullName>
                </value>
                <value>
                    <fullName>Trees</fullName>
                </value>
                <value>
                    <fullName>Vehicles</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Notice__c</fullName>
        <label>Type of Notice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Notice</fullName>
                </value>
                <value>
                    <fullName>Delinquency Notice</fullName>
                </value>
                <value>
                    <fullName>Pre-Lien</fullName>
                </value>
                <value>
                    <fullName>Lien</fullName>
                </value>
                <value>
                    <fullName>Securitized Transfer Fee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Violation_Description__c</fullName>
        <label>Violation Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Yardi_Code_Historical__c</fullName>
        <inlineHelpText>This was the Yardi code associated with this asset prior to securitization.</inlineHelpText>
        <label>Yardi Code - Historical</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <formula>Portfolio__r.Yardi_Property_Code__c</formula>
        <label>Yardi Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Property_Code__c</fullName>
        <label>Yardi Property Code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Vendor_Code__c</fullName>
        <formula>Source__r.Yardi_vendor_code__c</formula>
        <label>Yardi Vendor Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Days_Open__c</fullName>
        <formula>IF( ISPICKVAL(Status__c, &quot;Open&quot;), TODAY() -  Date_of_First_Notice_Recv_d__c , 
Closed_Date__c  -  Date_of_First_Notice_Recv_d__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># of Days Open</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Violation</label>
    <listViews>
        <fullName>Acker_Open_Violations</fullName>
        <columns>NAME</columns>
        <columns>Yardi_Property_Code__c</columns>
        <columns>Date_of_First_Notice__c</columns>
        <columns>Date_of_First_Notice_Recv_d__c</columns>
        <columns>Date_Assigned__c</columns>
        <columns>of_Days_Open__c</columns>
        <columns>Fine_Amount__c</columns>
        <columns>Occupied__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Rehab__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assigned_IH_Associate__c</field>
            <operation>equals</operation>
            <value>Andrew Acker</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>SEA Acker - Open Violations</label>
        <sharedTo>
            <role>Executive_Seattle</role>
            <role>Team_Member_Seattle</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Closed_Violations</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>contains</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed Violations</label>
    </listViews>
    <listViews>
        <fullName>All_Closed_Violations_Securitization</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open,Closed - No Fine Assessed,Closed - Paid,Dismissed</value>
        </filters>
        <filters>
            <field>Securitization_Pool__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Closed Violations - Securitization</label>
    </listViews>
    <listViews>
        <fullName>All_IH_Delinquencies</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Source__c</columns>
        <columns>HOA_Tracking__c</columns>
        <columns>Type_of_Notice__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Date_of_Notice_Recv_d__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>Date_Deliquency_Paid__c</columns>
        <columns>Delinquency_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Violations__c.IH_Delinquency</value>
        </filters>
        <label>All IH Delinquencies</label>
    </listViews>
    <listViews>
        <fullName>All_IH_Violations</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Source__c</columns>
        <columns>Rehab__c</columns>
        <columns>Type__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Date_of_First_Notice_Recv_d__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>Date_of_Confirmed_Compliance__c</columns>
        <columns>Fine_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Violations__c.IH_Violation</value>
        </filters>
        <label>All IH Violations</label>
    </listViews>
    <listViews>
        <fullName>All_IH_Violations1</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open Violations</label>
    </listViews>
    <listViews>
        <fullName>All_IH_Violations_with_Rehab</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Source__c</columns>
        <columns>Rehab__c</columns>
        <columns>Type__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Date_of_First_Notice_Recv_d__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>Date_of_Confirmed_Compliance__c</columns>
        <columns>Fine_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Violations__c.IH_Violation</value>
        </filters>
        <filters>
            <field>Rehab__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All IH Violations with Rehab</label>
    </listViews>
    <listViews>
        <fullName>All_IH_Violations_without_Rehab</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Source__c</columns>
        <columns>Rehab__c</columns>
        <columns>Type__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Date_of_First_Notice_Recv_d__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>Date_of_Confirmed_Compliance__c</columns>
        <columns>Occupied__c</columns>
        <columns>Fine_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Violations__c.IH_Violation</value>
        </filters>
        <filters>
            <field>Rehab__c</field>
            <operation>equals</operation>
        </filters>
        <label>All IH Violations without Rehab</label>
    </listViews>
    <listViews>
        <fullName>All_Occupant_Violations</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Source__c</columns>
        <columns>Lease__c</columns>
        <columns>TIP__c</columns>
        <columns>Type__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Date_of_First_Notice_Recv_d__c</columns>
        <columns>Date_of_First_Notice_Sent_to_Occupant__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>Date_of_Confirmed_Compliance__c</columns>
        <columns>Fine_Amount__c</columns>
        <columns>Date_Fine_Amount_Charged_to_Ledger__c</columns>
        <columns>Status__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Violations__c.Occupant_Violation</value>
        </filters>
        <label>All Occupant Violations</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Violations_Securitization</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <columns>Portfolio__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Securitization_Pool__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Open Violations - Securitization</label>
    </listViews>
    <listViews>
        <fullName>Brandon_s_Violations</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Portfolio__c</columns>
        <columns>Source__c</columns>
        <columns>Type__c</columns>
        <columns>Violation_Description__c</columns>
        <columns>Date_of_Required_Compliance__c</columns>
        <columns>of_Days_Open__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Assigned_IH_Associate__c</field>
            <operation>equals</operation>
            <value>Brandon Wooliver</value>
        </filters>
        <label>* Brandon&apos;s Violations</label>
        <sharedTo>
            <role>Team_Member_Inland_Empire</role>
        </sharedTo>
    </listViews>
</CustomObject>